rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax12/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		abstract strictfp void m() { 
			
		} 
	}
}